--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -434,4 +434,4 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/bootstrap-sortable/2.0.0/bootstrap-sortable.min.js"></script>
-
+<script src="js/deptInfo.js"></script>
