--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -53,7 +53,7 @@
 
 <div class="modal fade" id="editDeptInfoModal" tabindex="-1" role="dialog" aria-labelledby="editDeptInfoTitle" aria-hidden="true">
 	<div class="modal-dialog modal-lg" role="document">
-		<div class="modal-content">
+		<div class="modal-content" id="modal-deptInfo">
 
 			<div class="modal-header">
 				<h5 class="modal-title" id="editDeptInfoTitle">
@@ -71,7 +71,7 @@
 							<div class="form-group col-6">
 								<div class="input-group">
 									<span class="input-group-addon">簡章順序</span>
-									<input type="text" class="form-control" value="12" id="sort_order">
+									<input type="text" class="form-control" value="12" id="sortOrder">
 								</div>
 							</div>
 						</div>
@@ -85,7 +85,7 @@
 							<div class="form-group col-6">
 								<div class="input-group">
 									<span class="input-group-addon">讀卡代碼</span>
-									<input type="text" class="form-control" value="1001" id="card_code" disabled>
+									<input type="text" class="form-control" value="1001" id="cardCode" disabled>
 								</div>
 							</div>
 						</div>
@@ -96,7 +96,7 @@
 							</div>
 							<div class="form-group col-6">
 								<label for="">英文名稱</label>
-								<input type="text" class="form-control" value="Information Management" id="eng_title" disabled>
+								<input type="text" class="form-control" value="Information Management" id="engTitle" disabled>
 							</div>
 						</div>
 						<div class="row">
@@ -106,19 +106,19 @@
 							</div>
 							<div class="form-group col-6">
 								<label for="">系英文網站網址</label>
-								<input type="text" class="form-control" value="http://www.im.ncnu.edu.tw/en" id="eng_url">
+								<input type="text" class="form-control" value="http://www.im.ncnu.edu.tw/en" id="engUrl">
 							</div>
 						</div>
 						<div class="row">
 							<div class="form-group col-6">
 								<label for="">主要隸屬學群*</label>
-								<select class="form-control" id="main_group">
+								<select class="form-control" id="mainGroup">
 									<option>主要學群</option>
 								</select>
 							</div>
 							<div class="form-group col-6">
 								<label for="">次要隸屬學群</label>
-								<select class="form-control" id="sub_group">
+								<select class="form-control" id="subGroup">
 									<option>次要學群</option>
 								</select>
 							</div>
@@ -126,7 +126,7 @@
 						<div class="row">
 							<div class="form-group col-6">
 								<label for="">招收性別限制*</label>
-								<select class="form-control" id="gender_limit">
+								<select class="form-control" id="genderLimit">
 									<option value="null">男女兼收</option>
 									<option value="M">限男</option>
 									<option value="F">限女</option>
@@ -148,135 +148,124 @@
 						<div class="row">
 							<div class="form-group col">
 								<label for="">選系英文說明</label>
-								<textarea class="form-control" rows="4" id="eng_description">At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quosdolores et quas molestias excepturi sint, obcaecati cupiditate non provident, </textarea>
+								<textarea class="form-control" rows="4" id="engDescription">At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quosdolores et quas molestias excepturi sint, obcaecati cupiditate non provident, </textarea>
 							</div>
 						</div>
-					</form>
-
-					<% if(system == 'twoYear') { -%>
-					<%- include deptInfoForm/_selfEnrollmentTwoYear %>
-					<% } else { -%>
-					<%- include deptInfoForm/_selfEnrollmentOthers %>
-					<% } -%>
-
-					<% if(system == 'bachelor') { -%>
-					<%- include deptInfoForm/_quotaBachelor %>
-					<% } else { -%>
-					<%- include deptInfoForm/_quotaOthers %>
-					<% } -%>
-
-					<div class="row">
-						<div class="col">
-							<div class="card">
-								<div class="card-header bg-primary text-white">
-									審查費用
-								</div>
-								<div class="card-block">
-									<form>
-										<div class="form-check">
-											<label class="form-check-label">
-												<input class="form-check-input" type="checkbox" id="has_review_fee" value="">
-												是否需要收審查費用*
-											</label>
-										</div>
-										<hr>
-										<div class="form-group">
-											<label for="">審查費用中文說明</label>
-											<textarea class="form-control" rows="3" id="review_fee_detail">，小一能，法減指河相到子任我班，排學一得特其背。太聽叫打期此登兒位；美指持視！然意團。你必世起度色一的來思正長：外了河明文國！環點音己法請：非見例道有的社為名方所進</textarea>
-										</div>
-										<div class="form-group">
-											<label for="">審查費用英文說明</label>
-											<textarea class="form-control" rows="3" id="eng_review_fee_detail">le content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like reada</textarea>
-										</div>
-									</form>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="col">
-							<div class="card">
-								<div class="card-header bg-primary text-white">
-									other
-								</div>
-								<div class="card-block">
-									<form>
-										<div class="form-check">
-											<label class="form-check-label">
-												<input class="form-check-input" type="checkbox" id="has_foreign_special_class" value="">
-												是否招收外生專班*
-											</label>
-										</div>
-										<div class="form-check">
-											<label class="form-check-label">
-												<input class="form-check-input" type="checkbox" id="has_eng_taught" value="">
-												是否為全英文授課*
-											</label>
-										</div>
-										<div class="form-check">
-											<label class="form-check-label">
-												<input class="form-check-input" type="checkbox" id="has_disabilities" value="">
-												是否招收身障學生*
-											</label>
-										</div>
-										<div class="form-check">
-											<label class="form-check-label">
-												<input class="form-check-input" type="checkbox" id="has_disabilities" value="">
-												是否招收不具華文基礎學生*
-											</label>
-										</div>
-										<div class="form-check">
-											<label class="form-check-label">
-												<input class="form-check-input" type="checkbox" id="has_birth_limit" value="">
-												是否限制出生日期*
-											</label>
-										</div>
-									</form>
-									<hr>
-									<p>限制出生日期</p>
-									<form class="form-inline">
-										<div class="form-check mb-2 mr-sm-2 mb-sm-0">
-											<label class="form-check-label">
-												<input class="form-check-input" type="checkbox" id="has_birth_limit">
-											</label>
-										</div>
-										<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-											<input type="text" class="form-control">
-											<div class="input-group-addon">以後</div>
-										</div>
-									</form>
-									<form class="form-inline" style="padding-top: 20px;">
-										<div class="form-check mb-2 mr-sm-2 mb-sm-0">
-											<label class="form-check-label">
-												<input class="form-check-input" type="checkbox">
-											</label>
-										</div>
-										<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-											<input type="text" class="form-control">
-											<div class="input-group-addon">以前</div>
-										</div>
-									</form>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<hr>
 					
-					<form id="form-reviewItems">
-						<!-- 審查項目 -->
+
+						<% if(system == 'twoYear') { -%>
+						<%- include deptInfoForm/_selfEnrollmentTwoYear %>
+						<% } else { -%>
+						<%- include deptInfoForm/_selfEnrollmentOthers %>
+						<% } -%>
+
+						<% if(system == 'bachelor') { -%>
+						<%- include deptInfoForm/_quotaBachelor %>
+						<% } else { -%>
+						<%- include deptInfoForm/_quotaOthers %>
+						<% } -%>
+
+						<div class="row">
+							<div class="col">
+								<div class="card">
+									<div class="card-header bg-primary text-white">
+										審查費用
+									</div>
+									<div class="card-block">
+										<form>
+											<div class="form-check">
+												<label class="form-check-label">
+													<input class="form-check-input" type="checkbox" id="hasReviewFee" value="">
+													是否需要收審查費用*
+												</label>
+											</div>
+											<hr>
+											<div class="form-group">
+												<label for="">審查費用中文說明</label>
+												<textarea class="form-control" rows="3" id="reviewFeeDetail">，小一能，法減指河相到子任我班，排學一得特其背。太聽叫打期此登兒位；美指持視！然意團。你必世起度色一的來思正長：外了河明文國！環點音己法請：非見例道有的社為名方所進</textarea>
+											</div>
+											<div class="form-group">
+												<label for="">審查費用英文說明</label>
+												<textarea class="form-control" rows="3" id="engReviewFeeDetail">le content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like reada</textarea>
+											</div>
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="col">
+								<div class="card">
+									<div class="card-header bg-primary text-white">
+										other
+									</div>
+									<div class="card-block">
+
+											<div class="form-check">
+												<label class="form-check-label">
+													<input class="form-check-input" type="checkbox" id="hasForeignSpecialClass" value="">
+													是否招收外生專班*
+												</label>
+											</div>
+											<div class="form-check">
+												<label class="form-check-label">
+													<input class="form-check-input" type="checkbox" id="hasEngTaught" value="">
+													是否為全英文授課*
+												</label>
+											</div>
+											<div class="form-check">
+												<label class="form-check-label">
+													<input class="form-check-input" type="checkbox" id="hasDisabilities" value="">
+													是否招收身障學生*
+												</label>
+											</div>
+											<div class="form-check">
+												<label class="form-check-label">
+													<input class="form-check-input" type="checkbox" id="hasDisabilities" value="">
+													是否招收不具華文基礎學生*
+												</label>
+											</div>
+											<div class="form-check">
+												<label class="form-check-label">
+													<input class="form-check-input" type="checkbox" id="hasBirthLimit" value="">
+													是否限制出生日期*
+												</label>
+											</div>
+
+										<hr>
+										<p>限制出生日期</p>
+										<div class="form-inline">
+											<div class="input-group mb-2 mr-sm-2 mb-sm-0">
+												<input type="text" class="form-control">
+												<div class="input-group-addon">以後</div>
+											</div>
+										</div>
+										<div class="form-inline" style="padding-top: 20px;">
+											<div class="input-group mb-2 mr-sm-2 mb-sm-0">
+												<input type="text" class="form-control">
+												<div class="input-group-addon">以前</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<hr>
+						
+						<div id="form-reviewItems">
+							<!-- 審查項目 -->
+						</div>
+
+						<button type="button" class="btn btn-success" id="btn-addReviewItem">新增更多審查項目</button>
 					</form>
-
-					<button type="button" class="btn btn-success" id="btn-addReviewItem">新增更多審查項目</button>
-
 				</div>
 			</div>
 
 			<div class="modal-footer">
 				<!-- 「確認送出」後，block 住 form -->
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-				<button type="button" class="btn btn-success">確認送出</button>
 				<button type="button" class="btn btn-primary">儲存</button>
 			</div>
 
