學士班自招、聯招欄位顯示。 可以顯示，聯招人數自動計算。

--- a/components/deptInfoForm/_quotaBachelor.ejs
+++ b/components/deptInfoForm/_quotaBachelor.ejs
@@ -2,7 +2,7 @@
 <div class="row">
 	<div class="form-group col-4">
 		<label for="">聯招人數（學士專用）</label>
-		<input type="text" class="form-control" id="" disabled> <!-- 用算的 -->
+		<input type="text" class="form-control" id="admissionTotalQuota" disabled>
 	</div>
 	<div class="form-group col-1">
 		<label>　</label>
@@ -10,7 +10,7 @@
 	</div>
 	<div class="form-group col-3">
 		<label for="">個人申請人數</label>
-		<input type="text" class="form-control" id="admission_selection_quota">
+		<input type="text" class="form-control" id="admissionSelectionQuota">
 	</div>
 	<div class="form-group col-1">
 		<label for="">　</label>
@@ -18,6 +18,6 @@
 	</div>
 	<div class="form-group col-3">
 		<label for="">聯合分發人數</label>
-		<input type="text" class="form-control" id="admission_placement_quota">
+		<input type="text" class="form-control" id="admissionPlacementQuota">
 	</div>
 </div>
