--- a/components/deptInfoForm/_selfEnrollmentOthers.ejs
+++ b/components/deptInfoForm/_selfEnrollmentOthers.ejs
@@ -11,7 +11,7 @@
 						<div class="col">
 							<div class="form-check">
 								<label class="form-check-label">
-									<input class="form-check-input" type="checkbox" value="" id="school_has_self_enrollment">
+									<input class="form-check-input" type="checkbox" id="schoolHasSelfEnrollment">
 									本校是否可單獨招收僑生
 								</label>
 							</div>
@@ -21,7 +21,7 @@
 						<div class="col col-lg-4">
 							<div class="form-check">
 								<label class="form-check-label">
-									<input class="form-check-input" type="checkbox" value="" id="has_self_enrollment">
+									<input class="form-check-input" type="checkbox" id="hasSelfEnrollment">
 									是否單獨招收僑生（自招）
 								</label>
 							</div>
@@ -31,7 +31,7 @@
 						<div class="col">
 							<div class="form-check">
 								<label class="form-check-label">
-									<input class="form-check-input" type="checkbox" id="has_special_class" value="">
+									<input class="form-check-input" type="checkbox" id="hasSpecialClass">
 									是否開設僑生專班（有自主招生才能開專班）
 								</label>
 							</div>
