--- a/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
+++ b/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
@@ -9,25 +9,25 @@
 				<form>
 					<div class="form-check">
 						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" id="school_has_self_enrollment" value="">
+							<input class="form-check-input" type="checkbox" id="schoolHasSelfEnrollment">
 							本校是否可單獨招收僑生
 						</label>
 					</div>
 					<div class="form-check">
 						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" id="has_RiJian" value="">
+							<input class="form-check-input" type="checkbox" id="hasRiJian">
 							是否開設日間二技學制
 						</label>
 					</div>
 					<div class="form-check">
 						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" id="has_self_enrollment" value="">
+							<input class="form-check-input" type="checkbox" id="hasSelfEnrollment">
 							是否單獨招收僑生（自招）
 						</label>
 					</div>
 					<div class="form-check">
 						<label class="form-check-label">
-							<input class="form-check-input" type="checkbox" id="has_special_class" value="">
+							<input class="form-check-input" type="checkbox" id="hasSpecialClass">
 							是否開設僑生專班
 						</label>
 					</div>
@@ -36,22 +36,14 @@
 						<div class="col">
 							<div class="form-group">
 								<label for="">開設專班文號</label>
-								<input type="text" class="form-control" id="approval_no_of_special_class" value="臺教高(四)字第1040109682號">
+								<input type="text" class="form-control" id="approvalNoOfSpecialClass">
 							</div>
 						</div>
 						<div class="col">
 							<div class="form-group">
 								<label for="">開設專班文件電子檔</label>
 								<input type="file" class="form-control">
-								<ul id="approval_doc_of_special_class"></ul> <!-- list -->
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-6">
-							<div class="form-group">
-								<label for="">自招人數</label>
-								<input type="text" class="form-control" id="self_enrollment_quota" value="12">
+								<ul id="approvalDocOfSpecialClass"></ul> <!-- list -->
 							</div>
 						</div>
 					</div>
