--- a/components/deptInfoForm/_quotaOthers.ejs
+++ b/components/deptInfoForm/_quotaOthers.ejs
@@ -2,10 +2,10 @@
 <div class="row">
 	<div class="form-group col-6">
 		<label for="">聯招(個人申請)人數（碩博二技專用）</label>
-		<input type="text" class="form-control" id="admission_placement_quota">
+		<input type="text" class="form-control" id="admissionSelectionQuota">
 	</div>
 	<div class="form-group col-6">
 		<label for="">自招人數</label>
-		<input type="text" class="form-control" id="self_enrollment_quota">
+		<input type="text" class="form-control" id="selfEnrollmentQuota">
 	</div>
 </div>
