完成二技系所列表顯示。 到這個 commit ， 四個學制的系所可以正常顯示資料， 不過尚未有 checkbox 的選取邏輯（選Ａ才能選Ｂ這類的）， 以及審查項目的部分。

--- a/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
+++ b/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
@@ -42,8 +42,8 @@
 						<div class="col">
 							<div class="form-group">
 								<label for="">開設專班文件電子檔</label>
-								<input type="file" class="form-control">
-								<ul id="approvalDocOfSpecialClass"></ul> <!-- list -->
+								<input type="file" class="form-control" id="approvalDocOfSpecialClass">
+								已上傳檔案：<a id="approvalDocOfSpecialClassUrl" href=""></a>
 							</div>
 						</div>
 					</div>
