四個學制的自招、聯招邏輯。 耶最恐怖的弄好了。

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap-sortable/2.0.0/bootstrap-sortable.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.standalone.min.css">
 
 <h2>學制資訊</h2>
 <form id="form-deptInfo">
@@ -235,13 +236,13 @@
 										<p>限制出生日期</p>
 										<div class="form-inline">
 											<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-												<input type="text" class="form-control" id="birthLimitAfter">
+												<input type="text" class="form-control datepicker" id="birthLimitAfter">
 												<div class="input-group-addon">以後</div>
 											</div>
 										</div>
 										<div class="form-inline" style="padding-top: 20px;">
 											<div class="input-group mb-2 mr-sm-2 mb-sm-0">
-												<input type="text" class="form-control" id="birthLimitBefore">
+												<input type="text" class="form-control datepicker" id="birthLimitBefore">
 												<div class="input-group-addon">以前</div>
 											</div>
 										</div>
@@ -272,4 +273,5 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/bootstrap-sortable/2.0.0/bootstrap-sortable.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.min.js"></script>
 <script src="js/deptInfo.js"></script>
