--- a/components/deptInfoForm/_selfEnrollmentOthers.ejs
+++ b/components/deptInfoForm/_selfEnrollmentOthers.ejs
@@ -11,7 +11,7 @@
 						<div class="col">
 							<div class="form-check">
 								<label class="form-check-label">
-									<input class="form-check-input" type="checkbox" id="schoolHasSelfEnrollment">
+									<input class="form-check-input" type="checkbox" id="schoolHasSelfEnrollment" disabled>
 									本校是否可單獨招收僑生
 								</label>
 							</div>
