--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -252,12 +252,47 @@
 						</div>
 
 						<hr>
-						
 						<div id="form-reviewItems">
-							<!-- 審查項目 -->
-						</div>
+							<div v-for="doc in applicationDocs">
+								<div class="row">
+									<div class="form-group col-sm-4">
+										<label for="">審查項目</label>
 
-						<button type="button" class="btn btn-success" id="btn-addReviewItem">新增更多審查項目</button>
+										<select class="form-control" v-model="doc.type_id">
+												<option
+												v-for="type in reviewItemsTypes"
+												v-text="type.name"
+												v-bind:value="type.id"
+												v-bind:disabled="type.used"></option>
+										</select>
+									</div>
+
+									<div class="col-sm-8">
+										<div class="form-check">
+											<label class="form-check-label">
+												<input type="checkbox" class="form-check-input" v-model="doc.required" :disabled="!doc.modifiable">
+												是否為必備
+											</label>
+										</div>
+										<div class="form-group">
+											<label for="">審查項目中文說明</label>
+											<textarea class="form-control" rows="3" v-model="doc.description"></textarea>
+										</div>
+
+										<div class="form-group">
+											<label for="">審查項目英文說明</label>
+											<textarea class="form-control" rows="3" v-model="doc.eng_description"></textarea>
+										</div>
+
+										<div class="form-group text-right">
+											<button v-if="doc.modifiable" class="btn btn-danger rm-review-item-row" v-on:click="removeApplicationDoc(doc)">刪除此項審查項目</button>
+										</div>
+									</div>
+								</div>
+								<hr>
+							</div>
+							<button v-if="!isfull" type="button" class="btn btn-success" v-on:click="addApplicationDoc()">新增更多審查項目</button>
+						</div>
 					</form>
 				</div>
 			</div>
@@ -274,4 +309,6 @@
 
 <script src="https://cdn.jsdelivr.net/bootstrap-sortable/2.0.0/bootstrap-sortable.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js"></script> -->
+<script src="https://unpkg.com/vue"></script>
 <script src="js/deptInfo.js"></script>
