--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -69,7 +69,7 @@
 				<div class="container-fluid">
 					<form>
 						<div class="row">
-							<div class="form-group col-6">
+							<div id="sortOrderForm" class="form-group col-6">
 								<div class="input-group">
 									<span class="input-group-addon">簡章順序</span>
 									<input type="text" class="form-control" id="sortOrder">
@@ -92,61 +92,61 @@
 						</div>
 						<div class="row">
 							<div class="form-group col-6">
-								<label for="">中文名稱</label>
+								<label class="form-control-label" for="">中文名稱</label>
 								<input type="text" class="form-control" id="title" disabled>
 							</div>
 							<div class="form-group col-6">
-								<label for="">英文名稱</label>
+								<label class="form-control-label" for="">英文名稱</label>
 								<input type="text" class="form-control" id="engTitle" disabled>
 							</div>
 						</div>
 						<div class="row">
-							<div class="form-group col-6">
-								<label for="">系中文網站網址*</label>
+							<div id="urlForm" class="form-group col-6">
+								<label class="form-control-label" for="">系中文網站網址*</label>
 								<input type="text" class="form-control" id="url">
 							</div>
-							<div class="form-group col-6">
-								<label for="">系英文網站網址</label>
+							<div id="engUrlForm" class="form-group col-6">
+								<label class="form-control-label" for="">系英文網站網址</label>
 								<input type="text" class="form-control" id="engUrl">
 							</div>
 						</div>
 						<div class="row">
-							<div class="form-group col-6">
-								<label for="">主要隸屬學群*</label>
+							<div id="mainGroupForm" class="form-group col-6">
+								<label class="form-control-label" for="">主要隸屬學群*</label>
 								<select class="form-control" id="mainGroup">
 								</select>
 							</div>
-							<div class="form-group col-6">
-								<label for="">次要隸屬學群</label>
+							<div id="subGroupForm" class="form-group col-6">
+								<label class="form-control-label" for="">次要隸屬學群</label>
 								<select class="form-control" id="subGroup">
 								</select>
 							</div>
 						</div>
 						<div class="row">
-							<div class="form-group col-6">
-								<label for="">招收性別限制*</label>
+							<div id="genderLimitForm" class="form-group col-6">
+								<label class="form-control-label" for="">招收性別限制*</label>
 								<select class="form-control" id="genderLimit">
 									<option value="">男女兼收</option>
 									<option value="M">限男</option>
 									<option value="F">限女</option>
 								</select>
 							</div>
-							<div class="form-group col-6">
-								<label for="">最近一次系所評鑑*</label>
+							<div id="evaluationForm" class="form-group col-6">
+								<label class="form-control-label" for="">最近一次系所評鑑*</label>
 								<select class="form-control" id="evaluation">
 									<option>系所評鑑</option>
 								</select>
 							</div>
 						</div>
 						<div class="row">
-							<div class="form-group col">
-								<label for="">選系中文說明*</label>
+							<div id="descriptionForm" class="form-group col">
+								<label class="form-control-label" for="">選系中文說明*</label>
 								<textarea class="form-control" rows="4" id="description"></textarea>
 							</div>
 						</div>
 						<div class="row">
-							<div class="form-group col">
-								<label for="">選系英文說明</label>
+							<div id="engDescriptionForm" class="form-group col">
+								<label class="form-control-label" for="">選系英文說明</label>
 								<textarea class="form-control" rows="4" id="engDescription"></textarea>
 							</div>
 						</div>
@@ -179,12 +179,12 @@
 												</label>
 											</div>
 											<hr>
-											<div class="form-group">
-												<label for="">審查費用中文說明</label>
+											<div id="reviewFeeDetailForm" class="form-group">
+												<label class="form-control-label" for="">審查費用中文說明</label>
 												<textarea class="form-control" rows="3" id="reviewFeeDetail"></textarea>
 											</div>
-											<div class="form-group">
-												<label for="">審查費用英文說明</label>
+											<div id="engReviewFeeDetailForm" class="form-group">
+												<label class="form-control-label" for="">審查費用英文說明</label>
 												<textarea class="form-control" rows="3" id="engReviewFeeDetail"></textarea>
 											</div>
 										</form>
@@ -235,13 +235,13 @@
 										<hr>
 										<p>限制出生日期</p>
 										<div class="form-inline">
-											<div class="input-group mb-2 mr-sm-2 mb-sm-0">
+											<div id="birthLimitAfterForm" class="input-group mb-2 mr-sm-2 mb-sm-0">
 												<input type="text" class="form-control datepicker" id="birthLimitAfter">
 												<div class="input-group-addon">以後</div>
 											</div>
 										</div>
 										<div class="form-inline" style="padding-top: 20px;">
-											<div class="input-group mb-2 mr-sm-2 mb-sm-0">
+											<div id="birthLimitBeforeForm" class="input-group mb-2 mr-sm-2 mb-sm-0">
 												<input type="text" class="form-control datepicker" id="birthLimitBefore">
 												<div class="input-group-addon">以前</div>
 											</div>
@@ -300,7 +300,7 @@
 			<div class="modal-footer">
 				<!-- 「確認送出」後，block 住 form -->
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-				<button type="button" class="btn btn-primary">儲存</button>
+				<button type="button" class="btn btn-primary" id="deptDetailSave">儲存</button>
 			</div>
 
 		</div>
