--- a/components/deptInfoForm/_quotaBachelor.ejs
+++ b/components/deptInfoForm/_quotaBachelor.ejs
@@ -8,16 +8,16 @@
 		<label>　</label>
 		<p class="form-control-static">＝</p>
 	</div>
-	<div class="form-group col-3">
-		<label for="">個人申請人數</label>
+	<div id="admissionSelectionQuotaForm" class="form-group col-3">
+		<label class="form-control-label" for="">個人申請人數</label>
 		<input type="text" class="form-control" id="admissionSelectionQuota">
 	</div>
 	<div class="form-group col-1">
 		<label for="">　</label>
 		<p class="form-control-static">＋</p>
 	</div>
-	<div class="form-group col-3">
-		<label for="">聯合分發人數</label>
+	<div id="admissionPlacementQuotaForm" class="form-group col-3">
+		<label class="form-control-label" for="">聯合分發人數</label>
 		<input type="text" class="form-control" id="admissionPlacementQuota">
 	</div>
 </div>
