學士班系所儲存。 目前 application_docs 先帶假資料。

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -298,6 +298,15 @@
 							</div>
 							<button v-if="!isfull" type="button" class="btn btn-success" v-on:click="addApplicationDoc()">新增更多審查項目</button>
 						</div>
+
+						<hr>
+						
+						<div class="row">
+							<div id="memoForm" class="form-group col">
+								<label class="form-control-label" for="">Memo</label>
+								<textarea class="form-control" rows="4" id="memo"></textarea>
+							</div>
+						</div>
 					</form>
 				</div>
 			</div>
