二技儲存系所資料、修改假資料 typeid。

--- a/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
+++ b/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
@@ -34,14 +34,14 @@
 					<hr>
 					<div class="row">
 						<div class="col">
-							<div class="form-group">
-								<label for="">開設專班文號</label>
+							<div class="form-group" id="approvalNoOfSpecialClassForm">
+								<label class="form-check-label" for="">開設專班文號</label>
 								<input type="text" class="form-control" id="approvalNoOfSpecialClass">
 							</div>
 						</div>
 						<div class="col">
-							<div class="form-group">
-								<label for="">開設專班文件電子檔</label>
+							<div class="form-group" id="approvalDocOfSpecialClassForm">
+								<label class="form-check-label" for="">開設專班文件電子檔</label>
 								<input type="file" class="form-control" id="approvalDocOfSpecialClass">
 								已上傳檔案：<a id="approvalDocOfSpecialClassUrl" href=""></a>
 							</div>
