--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -253,25 +253,17 @@
 
 						<hr>
 						<div id="form-reviewItems">
-							<div v-for="doc in applicationDocs">
+							<div v-for="(doc, docIndex) in applicationDocs">
 								<div class="row">
 									<div class="form-group col-sm-4">
 										<label for="">審查項目</label>
 										<review-items-select
+										v-bind:doc_index="docIndex"
 										v-bind:selected_id="doc.type_id"
-										v-bind:review_items_types="reviewItemsTypes"
 										v-bind:modifiable="doc.modifiable"
 										></review-items-select>
-
-										<!-- <select class="form-control" v-model="doc.type_id">
-												<option
-												v-for="type in reviewItemsTypes"
-												v-text="type.name"
-												v-bind:value="type.id"
-												v-bind:disabled="type.used"></option>
-										</select> -->
 									</div>
-
+										<!-- v-on:ch_selected="chSelected" -->
 									<div class="col-sm-8">
 										<div class="form-check">
 											<label class="form-check-label">
@@ -300,7 +292,7 @@
 						</div>
 
 						<hr>
-						
+
 						<div class="row">
 							<div id="memoForm" class="form-group col">
 								<label class="form-control-label" for="">Memo</label>
@@ -325,4 +317,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.min.js"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js"></script> -->
 <script src="https://unpkg.com/vue"></script>
+<script src="https://unpkg.com/vuex"></script>	
 <script src="js/deptInfo.js"></script>
