填寫學士班聯合分發人數減招原因。

--- a/components/deptInfoForm/_quotaBachelor.ejs
+++ b/components/deptInfoForm/_quotaBachelor.ejs
@@ -21,3 +21,10 @@
 		<input type="text" class="form-control" id="admissionPlacementQuota">
 	</div>
 </div>
+
+<div class="row">
+	<div class="form-group col-12" id="decreaseReasonOfAdmissionPlacementForm">
+		<label class="form-control-label" for="">聯合分發人數減招原因</label>
+		<textarea class="form-control" rows="3" id="decreaseReasonOfAdmissionPlacement"></textarea>
+	</div>
+</div>
