--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -16,11 +16,9 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-6">
+		<div class="offset-3 col-6">
 			<button id="btn-deptInfoSave" data-action="save" type="button" class="btn btn-primary btn-block">儲存</button>
 		</div>
-		<div class="col-6">
-			<button id="btn-deptInfoCommit" data-action="commit" type="button" class="btn btn-danger btn-block">送出</button>
 		</div>
 	</div>
 </form>
@@ -43,7 +41,6 @@
 			<th>#</th>
 			<th>代碼</th>
 			<th>名稱</th>
-			<th>狀態</th>
 			<th>上次編輯者</th>
 			<th>上次編輯時間</th>
 		</tr>
