聯招人數參考值提醒。

--- a/components/deptInfoForm/_quotaBachelor.ejs
+++ b/components/deptInfoForm/_quotaBachelor.ejs
@@ -17,7 +17,9 @@
 		<p class="form-control-static">＋</p>
 	</div>
 	<div id="admissionPlacementQuotaForm" class="form-group col-3">
-		<label class="form-control-label" for="">聯合分發人數</label>
+		<label class="form-control-label" for="">
+		聯合分發人數 <i class="fa fa-question-circle" id="placementQuotaTip" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false"></i>
+		</label>
 		<input type="text" class="form-control" id="admissionPlacementQuota">
 	</div>
 </div>
